# OICode

./: .gitignore  CMakeLists.txt  FHQ.cpp  Splay.cpp  checker.cpp  lazysegtree.hpp  segtree.hpp  tmp.cpp
Codeforces/: 2153F.cpp  main.cpp
Codeforces/Contest/1066/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
Codeforces/Contest/1083/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
Codeforces/Contest/187/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
Codeforces/Contest/2030/: D.cpp  E.cpp  F.cpp
Codeforces/Contest/2048/: E.cpp  F.cpp
Codeforces/Contest/2144/: E1.cpp  E2.cpp
Codeforces/Contest/2145/: A.cpp  B.cpp
Codeforces/Contest/2149/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
Codeforces/Contest/2153/: F.cpp
Codeforces/Contest/2154/: C1.cpp  C2.cpp  D.cpp  D【题解】.md  E.cpp
Codeforces/Contest/2155/: C.cpp  E.cpp
Codeforces/Contest/2161/: A.cpp  B.cpp  C.cpp  D.cpp
Codeforces/Contest/2162/: D.cpp  E.cpp  F.cpp  H.cpp
Codeforces/Contest/2163/: A.cpp  B.cpp  C.cpp  D1&2.cpp  E.cpp
Codeforces/contest2145/: B.cpp
HeTao/HT-083-Div.2/: P10797.cpp  P10798.cpp  P10800.cpp  play1.in  play2.in  play2.out
HeTao/HT-085-Div.2/: T1.cpp
HeTao/SXD1/: Amereistr.cpp  amereistr.out  amereistr1.ans  amereistr1.in  amereistr2.ans  amereistr2.in  amereistr3.ans  amereistr3.in  amereistr4.ans  amereistr4.in  amereistr5.in  amereistr6.ans  amereistr6.in  amereistr7.ans  amereistr7.in
HeTao/SXD2/A/: laser1.in  (+16 more)
HeTao/zzyz251022CSP-S/: reverse.cpp  reverse1.in  reverse2.ans  reverse2.in  reverse3.ans  reverse3.in  venture.cpp  venture1.ans  venture1.in  venture2.ans  venture2.in  venture3.ans  venture3.in  xcx.cpp
Luogu/: Contest.cpp  P10951.cpp  P11024.cpp  P14254.cpp  P14308.cpp  P14597.cpp  P14598.cpp  P1471.cpp  P3377.cpp  P3379.cpp  P4408.cpp  P4719.cpp  P5304.cpp  P5435.cpp  P5471.cpp  P5537.cpp  P6327.cpp  P7114.cpp  P7521.cpp  P7669.cpp  P8338.cpp  P8867.cpp  P8868.cpp  P9754.cpp  P9870.cpp
MyProblem/MisreadTheQuestion/: MisreadTheQuestion.md  T3.cpp  genin.cpp  genout.cpp  std.cpp
SomeGoodTemplate/: FastIO.cpp  Gcd.cpp  LeftistTree.cpp  Sort.cpp  lazysegtree.hpp  segtree.hpp
SundryItems/: SomethingInsteresting.cpp  ycpc05-1.txt
astar/2025/: T1.cpp
atcoder/abc432/: F.cpp
atcoder/abc433/: A.cpp  D.cpp  F.cpp
atcoder/agc023/: F.cpp
atcoder/ndpc/: A.cpp  B.cpp
(+152 files in other folders)
